<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <!-- Auth Flow -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.taskmaster.ui.auth.LoginFragment"
        android:label="@string/login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_loginFragment_to_tasksFragment"
            app:destination="@id/tasksFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.taskmaster.ui.auth.RegisterFragment"
        android:label="@string/register">
        <action
            android:id="@+id/action_registerFragment_to_tasksFragment"
            app:destination="@id/tasksFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Main Flow -->
    <fragment
        android:id="@+id/tasksFragment"
        android:name="com.example.taskmaster.ui.tasks.TasksFragment"
        android:label="@string/tasks">
        <action
            android:id="@+id/action_tasksFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_tasksFragment_to_taskDetailFragment"
            app:destination="@id/taskDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/projectsFragment"
        android:name="com.example.taskmaster.ui.projects.ProjectsFragment"
        android:label="@string/projects">
        <action
            android:id="@+id/action_projectsFragment_to_addEditProjectFragment"
            app:destination="@id/addEditProjectFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_projectsFragment_to_projectDetailFragment"
            app:destination="@id/projectDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.example.taskmaster.ui.calendar.CalendarFragment"
        android:label="@string/calendar" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.taskmaster.ui.profile.ProfileFragment"
        android:label="@string/profile" />

    <fragment
        android:id="@+id/addEditTaskFragment"
        android:name="com.example.taskmaster.ui.tasks.AddEditTaskFragment"
        android:label="{title}">
        <argument
            android:name="taskId"
            android:defaultValue="@null"
            app:argType="long"
            app:nullable="true" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/taskDetailFragment"
        android:name="com.example.taskmaster.ui.tasks.TaskDetailFragment"
        android:label="@string/task_details">
        <argument
            android:name="taskId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/addEditProjectFragment"
        android:name="com.example.taskmaster.ui.projects.AddEditProjectFragment"
        android:label="{title}">
        <argument
            android:name="projectId"
            android:defaultValue="@null"
            app:argType="long"
            app:nullable="true" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/projectDetailFragment"
        android:name="com.example.taskmaster.ui.projects.ProjectDetailFragment"
        android:label="@string/project_details">
        <argument
            android:name="projectId"
            app:argType="long" />
    </fragment>

</navigation>
